--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,6 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #ffffff;
     color: #333;
-    
-
 }
 
 header {
@@ -21,7 +19,6 @@ header {
     padding: 20px;
     background-color: #ffffff;
     border-bottom: 1px solid #eaeaea;
-
 }
 
 header>img {
@@ -30,29 +27,22 @@ header>img {
 }
 
 @keyframes myAnim {
-
-    0%,
-    100% {
+    0%, 100% {
         transform: translateY(0) rotate(0);
         transform-origin: 50% 50%;
     }
-
     15% {
         transform: translateY(-30px) rotate(-6deg);
     }
-
     30% {
         transform: translateY(15px) rotate(6deg);
     }
-
     45% {
         transform: translateY(-15px) rotate(-3.6deg);
     }
-
     60% {
         transform: translateY(9px) rotate(2.4deg);
     }
-
     75% {
         transform: translateY(-6px) rotate(-1.2deg);
     }
@@ -79,7 +69,6 @@ header>img {
     border-radius: 50px;
     height: 50px;
     margin-right: 10px;
-
 }
 
 .navbar {
@@ -103,12 +92,15 @@ header>img {
     margin: 0 15px;
 }
 
-.navbar ul li a {
+.nav-links li a {
     text-decoration: none;
     color: #333;
     font-weight: 500;
 }
 
+.active-link a {
+    color: #e74c3c;
+}
 
 /* Floating Cart Icon */
 .floating-cart {
@@ -136,6 +128,7 @@ header>img {
     top: -5px;
     right: -5px;
     background-color: #00afed;
+    border: 2px solid #ffffff;
     color: white;
     border-radius: 50%;
     padding: 2px 6px;
@@ -190,17 +183,11 @@ header>img {
 }
 
 .search-bar {
-
     border: 2px solid #00afed;
     border-radius: 50px;
     display: flex;
     height: 35px;
     margin-left: 16px;
-
-}
-
-.active-link a {
-    color: #e74c3c;
 }
 
 .search-bar .input-box {
@@ -213,16 +200,13 @@ header>img {
     outline: none;
 }
 
-
 .search-bar .search-btn {
     border: none;
-    width: 100px;
-    border-radius: 0 48px 48px 0;
     font-size: 16px;
     font-weight: 600;
     color: #e74c3c;
     cursor: pointer;
-
+    border-radius: 0 48px 48px 0;
 }
 
 .search-bar input[placeholder] {
@@ -237,7 +221,7 @@ header>img {
 .carousel {
     position: relative;
     width: 100%;
-    height: 600px;
+    height: 800px;
     overflow: hidden;
 }
 
@@ -246,7 +230,6 @@ header>img {
     transition: transform 1s ease;
     height: 100%;
 }
-
 
 .carousel-images img {
     min-width: 100%;
@@ -276,7 +259,7 @@ header>img {
 .carousel-indicators {
     position: absolute;
     bottom: 20px;
-    left: 90%;
+    left: 50%;
     transform: translateX(-50%);
     display: flex;
 }
@@ -294,21 +277,32 @@ header>img {
     background-color: #ff5733;
 }
 
-.hero-btn button {
+.hero-btn {
+    position: relative;
     margin: 5px;
+}
+
+.hero-btn button {
+    margin: 0 5px;
 }
 
 .hero-text {
     position: absolute;
     top: 50%;
-    /* left: 50%; */
+    left: 40%;
     transform: translate(-50%, -50%);
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
+.hero-text h1 {
+    font-size: 48px;
+    margin: 20px 0;
+}
+
 .hero-text h2 {
-    font-size: 18px;
+    font-size: 25px;
+    color: aqua;
     animation: h2-name 4s ease 0s 1 normal forwards;
 }
 
@@ -317,21 +311,16 @@ header>img {
         transform: scale(2);
         transform-origin: 50% 100%;
     }
-
     100% {
         transform: scale(1);
         transform-origin: 50% 100%;
     }
 }
 
-.hero-text h1 {
-    font-size: 48px;
-    margin: 20px 0;
-}
-
 .hero-text p {
     font-size: 16px;
     margin-bottom: 30px;
+    font-weight: 500;
 }
 
 button {
@@ -344,58 +333,43 @@ button {
     cursor: pointer;
 }
 
-.hero-btn button i {
-    margin-right: 10px;
+button:hover {
+    background-color: #f9f9f9;
+    color: #e74c3c;
 }
 
 .shop-icon {
     margin-right: 10px;
 }
 
-button:hover {
-    background-color: #f9f9f9;
-    color: #e74c3c;
-}
-
 .socials {
-    
-    margin-top: 15px;
-
-}
-
-.socials ul li i {
-    color: #f9f9f9;
-    font-size: 20px;
-
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .socials ul {
     list-style-type: none;
     display: flex;
-    margin-left: 20%;
-    gap: 35px;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+}
+
+.socials ul li i {
+    color: #f9f9f9;
+    font-size: 20px;
 }
 
 .socials ul li i:hover {
     color: #e74c3c;
-    -webkit-box-shadow: 0px 0px 10px 1px rgba(60, 185, 230, 1);
-    -moz-box-shadow: 0px 0px 10px 1px rgba(60, 185, 230, 1);
-    box-shadow: 0px 0px 10px 1px rgba(60, 185, 230, 1);
 }
 
-.menu-icon:hover {
-    color: #e74c3c;
-}
-
-.nav-links li a:hover {
-    color: #e74c3c;
-}
-
-/* Hero design ends here */
-
-
-/* trending styling */
-
+/* Trending styling */
 .trending {
     top: 20px;
     position: relative;
@@ -412,7 +386,6 @@ button:hover {
     top: 10px;
     left: 10px;
     background-color: rgba(231, 76, 60, 0.7);
-    /* Red color with 70% opacity */
     color: white;
     font-size: 12px;
     font-weight: bold;
@@ -427,6 +400,11 @@ button:hover {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
 }
+
+.visible.active {
+    opacity: 1;
+}
+
 
 .fade-in {
     opacity: 1;
@@ -706,7 +684,7 @@ footer {
 .hero-text {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -900,6 +878,23 @@ button:hover {
         width: 100%;
     }
 
+    .user {
+        display: flex;
+        margin-top: 9px;
+    }
+
+    .user p {
+
+        font-size: 16px;
+        margin-top: 10px;
+    }
+
+    .user img {
+        width: 50px;
+        border: 2px solid #e74c3c;
+        border-radius: 50px;
+        height: 50px;
+    }
 
 
     .search-bar {
@@ -909,8 +904,6 @@ button:hover {
         display: flex;
         height: 35px;
         margin-top: 16px;
-        margin-left: 35px;
-        margin-left: 40px;
 
     }
 
@@ -927,7 +920,7 @@ button:hover {
 
     .search-bar .search-btn {
         border: none;
-        width: 100px;
+        width: 60px;
         border-radius: 0 48px 48px 0;
         font-size: 16px;
         font-weight: 500;
@@ -1208,7 +1201,9 @@ button:hover {
 .who {
     display: flex;
     margin-top: 20px;
-    gap: 5px;
+    gap: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 
 }
 
@@ -1218,8 +1213,8 @@ button:hover {
 } */
 
 .who .about-banner img {
-    width: 550px;
-    height: 490px;
+    width: 50rem;
+    height: 40rem;
     border-radius: 23px;
     margin-top: 25px;
 }
